<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MM FTP WORLD</string>
    <string name="hello_world">Test FTP</string>
    <string name="statusdescr">Status:</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_setting">Setting</string>

    <string name="setting_page">Setting</string>
    <string name="setting_page_txthost">Host</string>
    <string name="setting_page_txtuser">User</string>
    <string name="setting_page_txtpassword">Password</string>
    <string name="setting_page_txtport">Port</string>
    <string name="setting_page_btnSave">Save</string>
    <string name="setting_page_btnCancel">Cancel</string>
    <string name="title_activity_setting">Setting</string>
    <string name="setting_page_DeviceMemory">Device memory</string>
    <string name="setting_page_ExternalSD">External SD</string>

    <color name="blueTot">#071A52</color>
    <color name="blueListDir">#112C7C</color>
    <color name="blueListFile">#197AAE</color>
    <color name="blueFileSelected">#E7F3FA</color>
    <color name="whiteText">#ffffff</color>
    <color name="green">#01DF01</color>
    <color name="red">#FF0000</color>

    <string name="error_not0">Port must be > 0!</string>
    <string name="error_connection">Connection error. Check setting.</string>
    <string name="error_foldercreation">Error during folder creation.</string>
    <string name="error_downloadfile">Error during files download.</string>
    <string name="error_duringdownload">Connection error during files download.</string>

</resources>
