<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:background="@color/blueTot"
    tools:context=".SettingActivity">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blueListFile"
            android:layout_marginTop="30dp">
        <TextView
            android:id="@+id/HostDescr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:textColor="@color/whiteText"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/setting_page_txthost"
            android:layout_column="1"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/Host"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:textColor="@color/whiteText"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_column="2"
            android:layout_weight="9"/>
        </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blueListFile" >
        <TextView
            android:id="@+id/UserPort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:textColor="@color/whiteText"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/setting_page_txtport"
            android:layout_column="1"
            android:layout_weight="3"/>

        <EditText
            android:id="@+id/Port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_column="2"
            android:layout_marginStart="17dp"
            android:layout_weight="7"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/whiteText" />
    </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blueListFile"
            android:layout_marginTop="10dp">
            <TextView
            android:id="@+id/UserDescr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:textColor="@color/whiteText"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/setting_page_txtuser"
            android:layout_column="1"
            android:layout_weight="3"/>
            <EditText
            android:id="@+id/User"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:textColor="@color/whiteText"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_column="2"
            android:layout_weight="7"/>
        </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blueListFile" >
        <TextView
            android:id="@+id/UserPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:textColor="@color/whiteText"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/setting_page_txtpassword"
            android:layout_column="1"
            android:layout_weight="3"/>
        <EditText
            android:id="@+id/Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:textColor="@color/whiteText"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_column="2"
            android:layout_weight="7"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:background="@color/blueListFile">

        <Button
            android:id="@+id/BtnSaveSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_page_btnSave"
            android:layout_column="1"
            android:layout_weight="3" />
        <Button
            android:id="@+id/BtnCancelSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_page_btnCancel"
            android:layout_column="1"
            android:layout_weight="3" />
    </TableRow>


</TableLayout>
